--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,7 @@ android {
 }
 apply plugin: "androidx.navigation.safeargs"
 dependencies {
+    implementation 'com.makeramen:roundedimageview:2.3.0'
     implementation 'com.squareup.retrofit2:retrofit:2.6.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.6.0'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
