--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,19 +38,26 @@ android {
 }
 apply plugin: "androidx.navigation.safeargs"
 dependencies {
+    def room_version = "2.2.6"
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+
+    implementation 'pub.devrel:easypermissions:1.2.0'
+    implementation 'com.vincent.filepicker:MultiTypeFilePicker:1.0.7'
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
     implementation 'com.makeramen:roundedimageview:2.3.0'
     implementation 'com.squareup.retrofit2:retrofit:2.6.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.6.0'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
-    implementation 'com.android.volley:volley:1.1.1'
+    implementation 'com.android.volley:volley:1.2.0'
     implementation 'np.com.susanthapa.curved_bottom_navigation:curved_bottom_navigation:0.6.3'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation 'androidx.navigation:navigation-fragment:2.3.4'
-    implementation 'androidx.navigation:navigation-ui:2.3.4'
-    implementation "androidx.navigation:navigation-compose:1.0.0-alpha09"
+    implementation 'androidx.navigation:navigation-fragment:2.3.5'
+    implementation 'androidx.navigation:navigation-ui:2.3.5'
+    implementation "androidx.navigation:navigation-compose:1.0.0-alpha10"
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
