fix profile cat

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,7 @@
         <activity android:name=".WishListActivity"/>
         <activity android:name=".ForgetPasswordActivity"/>
         <activity android:name=".CompleteCatBiodataActivity"/>
+        <activity android:name=".EditCatActivity"/>
     </application>
 
 </manifest>
